--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-image-file-resizer": "^0.4.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
